2003-10-06  Guido Flohr  <guido@imperia.net>
            Bruno Haible  <bruno@clisp.org>

	* x-perl.c (enum symbol_type_ty): New enum.
	(struct token_ty): Rename field string_type to sub_type and change its
	type to 'int'.
	(extract_quotelike_pass3, interpolate_keywords): Update.
	(x_perl_prelex): Set sub_type also for symbol tokens.
	(x_perl_lex): Special handling of prototype argument lists.
	Reported by Crispin Flowerday <cflowerday@zeus.com>.

2003-09-22  Bruno Haible  <bruno@clisp.org>

	* x-sh.c (read_word): Warn about $"...".

2003-09-18  Bruno Haible  <bruno@clisp.org>

	* gettext-po.h (po_file_domain_header, po_header_field,
	po_message_is_obsolete, po_message_is_fuzzy, po_message_is_format): New
	declarations.
	* gettext-po.c (po_file_domain_header, po_header_field,
	po_message_is_obsolete, po_message_is_fuzzy, po_message_is_format): New
	functions.
	* Makefile.am (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 1:0:1.

2003-09-14  Bruno Haible  <bruno@clisp.org>

	* plural-count.c: Include plural-count.h.
	* x-po.c: Include x-properties.h.
	* x-java.l (append_strings): Change argument type to 'const char *'.

2003-09-14  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c (check_plural_eval): Mark some strings as c-format.
	(msgfmt_add_message): Make static.
	* po-lex.c (mbfile_getc, control_sequence): Mark some strings as
	c-format.

2003-09-18  Bruno Haible  <bruno@clisp.org>

	* FILES: Update.

2003-09-14  Bruno Haible  <bruno@clisp.org>

	More reliable checking for read errors.
	* po-lex.c (mbfile_getc): Diagnose read errors also in the middle of
	multibyte characters.
	(lex_getc): Diagnose read errors also right after backslash.
	* x-rst.c (extract_rst): Diagnose read errors also inside ConstName
	and immediately after #.

2003-09-14  Bruno Haible  <bruno@clisp.org>

	* write-mo.c: Include fwriterror.h.
	(msgdomain_write_mo): Use fwriteerror, to get right errno value in
	error message about write error.
	* write-po.c: Include fwriterror.h.