@@ -1,3 +1,9 @@
+2003-10-04  Bruno Haible  <bruno@clisp.org>
+
+	* x-glade.c: Don't include msgl-ascii.h and msgl-iconv.h.
+	* x-python.c: Likewise.
+	* x-tcl.c: Likewise.
+
 2003-10-06  Guido Flohr  <guido@imperia.net>
             Bruno Haible  <bruno@clisp.org>
 
